tests/purs/warning/UnambiguousQuantifiedKind.out
Error found:
in module [33mMain[0m
at tests/purs/warning/UnambiguousQuantifiedKind.purs:12:1 - 12:11 (line 12, column 1 - line 12, column 11)

  No type declaration was provided for the top-level declaration of [33mtest2[0m.
  It is good practice to provide type declarations as a form of documentation.
  The inferred type of [33mtest2[0m was:
  [33m     [0m
  [33m  Int[0m
  [33m     [0m

in value declaration [33mtest2[0m

See https://github.com/purescript/documentation/blob/master/errors/MissingTypeDeclaration.md for more information,
or to contribute content related to this error.

